test/test_examples/syntactic_examples/syntax_error/error_fun_def_21.zig
// Syntax error: comma in front of first parameter

const ifj = @import("ifj24.zig"); 

pub fn foo(, hello : []u8) void {

}  